# indexer-proxy

./: .gitignore  Cargo.toml  README.md
.dummy/proxy/: Cargo.toml
.github/: dependabot.yml
.github/actions/build-in-docker/: Dockerfile  action.yml
.github/workflows/: deploy-docker-arm64.yml  deploy-docker.yml  develop.yml  discord.yml  discord2.yml  discord3.yml  main.yml
.github/workflows/scripts/: createdummy.sh  fetchVersion.sh
cli/: Cargo.toml
cli/examples/: consumer.rs
cli/src/: main.rs  payg.rs  proxy.rs
consumer-proxy/: Cargo.toml
consumer-proxy/src/: cli.rs  main.rs  p2p.rs  payg.rs  server.rs
doc/: error-code-dictionary.md
dumb/utils/: Cargo.toml
indexer-proxy/: Cargo.toml  Dockerfile
indexer-proxy/src/: account.rs  auth.rs  cli.rs  contracts.rs  key.rs  main.rs  p2p.rs  payg.rs  project.rs  server.rs
p2p/: Cargo.toml
p2p/examples/: simple.rs
p2p/src/: handler.rs  lib.rs  primitives.rs  server.rs
p2p/src/behaviour/group/: handler.rs  protocol.rs
p2p/src/behaviour/rpc/: codec.rs  handler.rs  mod.rs  protocol.rs
p2p/src/rpc/: channel.rs  helper.rs  http.rs  mod.rs
proxy/: Cargo.toml  Dockerfile  docker-compose.yml
proxy/examples/: agreement-query.rs  free-query.rs  mock-open.rs  p2p-query.rs
proxy/src/: account.rs  auth.rs  cli.rs  contracts.rs  graphql.rs  main.rs  metrics.rs  monitor.rs  p2p.rs  payg.rs  project.rs  server.rs  subscriber.rs
utils/: Cargo.toml
utils/src/: constants.rs  eip712.rs  error.rs  lib.rs  p2p.rs  payg.rs  request.rs  tools.rs
utils/src/p2p/: handler.rs  mod.rs  server.rs
utils/src/p2p/behaviour/group/: handler.rs
utils/src/p2p/behaviour/rpc/: handler.rs  mod.rs
utils/src/p2p/rpc/: helper.rs  http.rs  mod.rs  ws.rs
