[package]
name = "subql-p2p"
version = "0.3.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bincode = "1.3"
bs58 = "0.4"
cuckoofilter = "0.5"
futures = "0.3"
httparse = "1.6"
instant = "0.1"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16"

[dependencies.libp2p]
version = "0.44"
default-features = false
features = ["autonat", "deflate", "dns-tokio", "floodsub", "identify", "kad", "gossipsub", "mdns", "mplex", "noise", "ping", "plaintext", "pnet", "relay", "request-response", "rendezvous", "serde", "tcp-tokio", "uds", "wasm-ext", "websocket", "yamux"] # TODO cleanup
