[package]
name = "subql-proxy"
version = "0.3.0"
edition = "2021"

[features]
default = ["p2p"]
p2p = ["subql-p2p"]

[dependencies]
subql-p2p = { version = "0.3",  path = "../p2p", optional = true }
subql-utils = { version = "0.3",  path = "../utils" }
subql-contracts = { git = "https://github.com/subquery/network-contracts", branch = "kepler-network" }
async-trait = "0.1"
axum = "0.5"
chrono = "0.4"
hex = "0.4"
jsonwebtoken = "8.1"
redis = { version = "0.21", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
once_cell = "1.12"
openssl = { version = "0.10", features = ["vendored"] }
prometheus = { version = "0.13", features = ["push"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with={ version = "1.1", features = ["json"] }
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16"
tower-http = { version = "0.3", features = ["cors"] }
url = "2.2"
ethers = "0.17"
