[package]
name = "subql-proxy"
version = "0.3.0-3"
edition = "2021"

[dependencies]
subql-utils = { version = "0.3",  path = "../utils" }
subql-contracts = { git = "https://github.com/subquery/network-contracts", branch = "kepler-network" }
axum = "0.6"
bincode = "1.3"
chrono = "0.4"
ethers = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hex = "0.4"
jsonwebtoken = "8.1"
redis = { version = "0.22", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
once_cell = "1.12"
openssl = { version = "0.10", features = ["vendored"] }
prometheus = { version = "0.13", features = ["push"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with={ version = "2.1", features = ["json"] }
structopt = "0.3"
sysinfo = "0.28"
tdn = { version = "0.10", default-features = false, features = ["multiple"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18"
tower-http = { version = "0.4", features = ["cors"] }
url = "2.2"