[package]
name = "subql-proxy-utils"
version = "0.2.0"
edition = "2021"

[features]
default = ["p2p"]
p2p = ["libp2p"]

[dependencies]
async-trait = "0.1"
axum = "0.5"
bincode = "1.3"
blake3="1.3"
bs58 = "0.4"
chrono = "0.4"
cuckoofilter = "0.5"
futures = "0.3"
graphql_client = { version = "0.10", features = ["graphql_query_derive", "reqwest-blocking"] }
hex = "0.4"
httparse = "1.6"
instant = "0.1"
jsonwebtoken = "=7.2"
rand_chacha = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rustc-hex = "2.1"
once_cell = "1.12"
openssl = { version = "0.10", features = ["vendored"] }
prometheus = { version = "0.13", features = ["push"] }
secp256k1 = { version = "0.21", features = ["recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with={ version = "1.1", features = ["json"] }
smallvec = "1.8"
structopt = "0.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16"
uint = "0.9"
url = {version = "2.2" }
web3 = "0.18"
ethereum-types = "0.12"

[dependencies.libp2p]
version = "0.44"
optional = true
default-features = false
features = ["autonat", "deflate", "dns-tokio", "floodsub", "identify", "kad", "gossipsub", "mdns", "mplex", "noise", "ping", "plaintext", "pnet", "relay", "request-response", "rendezvous", "secp256k1", "serde", "tcp-tokio", "uds", "wasm-ext", "websocket", "yamux"] # TODO cleanup