[package]
name = "subql-utils"
version = "0.3.0"
edition = "2021"

[dependencies]
axum = "0.5"
blake3="1.3"
bs58 = "0.4"
hex = "0.4"
rand_chacha = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rustc-hex = "2.1"
once_cell = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with={ version = "2.1", features = ["json"] }
uint = "0.9"
ethers = "1.0"
ethereum-types = "0.14"